# eos-kalite

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  eos-kalite-system-helper.service.in  eos-kalite-system-helper.socket
debian/: changelog  control  copyright  eos-kalite-system-helper.install  eos-kalite-tools.install  postinst
src/: Makefile.am  eos-kalite-backup.in  eos-kalite-backup.py  flatpakutils.py  utils.py
